@@ -4,7 +4,13 @@ Changelog
 1.2 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Removed the running of tests. I always found it a bit iffy, and getting
+  rid of it solved a lot of issues. Pyroma is now focused solely on
+  packaging quality.
+  
+- A package on PyPI with several versions will no longer return an error.
+
+- Now looks for documentation on pythonhosted.org or readthedocs.org.
 
 
 1.1 (2013-03-05)
